Change page titles

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Unicorn | Home{% endblock %}
+{% block title %}Home | Unicorn AI{% endblock %}
 
 {% block body %}
 <nav>
