--- a/templates/resume_create.html
+++ b/templates/resume_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Unicorn | Create resume{% endblock title %}
+{% block title %}Create resume | Unicorn AI{% endblock title %}
 
 {% block body %}
 <form action="" method="post">
