--- a/templates/resume_detail.html
+++ b/templates/resume_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Unicorn | Resume detail{% endblock title %}
+{% block title %}Resume detail | Unicorn AI{% endblock title %}
 
 {% block body %}
 <a href="{% url 'home' %}">Home</a>
