--- a/templates/update_profile_picture.html
+++ b/templates/update_profile_picture.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Unicorn | Change profile picture{% endblock %}
+{% block title %}Change profile picture | Unicorn AI{% endblock %}
 
 {% block body %}
 <form action="" enctype="multipart/form-data" method="post">
