--- a/templates/user_update.html
+++ b/templates/user_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Unicorn | Change info{% endblock %}
+{% block title %}Change info | Unicorn AI{% endblock %}
 
 {% block body %}
 <a href="{% url 'home' %}">Home</a>
