--- a/templates/resume_access_forbidden.html
+++ b/templates/resume_access_forbidden.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}You can't view this resume{% endblock title %}
+{% block title %}You can't view this resume | Unicorn AI{% endblock title %}
 
 {% block body %}
 <p>Sorry, you can't view this resume because the owner restricted the access for anonymous users</p>
