--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,25 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Login{% endblock %}
+{% block title %}Login | Unicorn AI{% endblock title %}
 
 {% block body %}
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <a href="{% url 'password_reset' %}">Forgot password?</a><br><br>
-    <button type="submit">Log in</button>
-</form>
+<div class="container d-flex flex-column justify-content-center align-items-center flex-wrap" style="height: 100vh;">
+    <h1 class="mb-4">Login</h1>
+    <form action="" method="post" class="form h-auto rounded-4 col-lg-3 p-3 col-md-4 col-sm-6">
+        {% csrf_token %}
+        <div>
+            <label for="id_username" class="form-label">Username:</label>
+            <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username"
+                maxlength="150" required="" id="id_username" class="form-control">
+        </div>
+        <div class="mt-2">
+            <label for="id_password" class="form-label">Password:</label>
+            <input type="password" name="password" autocomplete="current-password" required="" id="id_password"
+                class="form-control">
+            <a href="{% url 'password_reset' %}">Forgot password?</a>
+        </div>
+        <button type="submit"
+            class="btn bg-primary-subtle text-primary-emphasis border border-primary-subtle mt-3">Submit</button>
+    </form>
+</div>
 {% endblock body %}
