--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}user.name | Unicorn AI{% endblock %}
+{% block title %}{{ user.name }} | Unicorn AI{% endblock %}
 
 {% block body %}
 <a href="{% url 'home' %}">Home</a>
