misc: prettify UI

--- a/templates/ai_answer.html
+++ b/templates/ai_answer.html
@@ -20,7 +20,7 @@
     </div>
 </nav>
 <div class=" d-flex justify-content-center align-items-center" style="height: 80vh;">
-    <div class="card fit-content">
+    <div class="card col-lg-4 col-md-7 col-sm-10">
         <div class="card-header text-center">
             <h5>AI Answer</h5>
         </div>
