--- a/templates/resume_details.html
+++ b/templates/resume_details.html
@@ -14,10 +14,12 @@
 <div class="container mt-4">
     <div class="card text-white bg-dark mb-3 mb-5">
         <div class="row g-0">
+            {% if object.owner.profile_picture %}
             <div class="col-md-4 d-flex justify-content-center align-items-center" style="overflow-y: hidden;">
                 <img src="{{ object.owner.profile_picture.url }}" class="rounded-start w-100"
                     alt="{{ object.owner.name }}">
             </div>
+            {% endif %}
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">{{ object.owner.name }}</h5>
