--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -9,30 +9,27 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card text-white bg-dark mb-3">
-                <div class="card-header">
-                    Profile
-                </div>
-                <div class="card-body">
-                    {% if object.profile_picture %}
-                    <div class="text-center mb-3">
-                        <img src="{{ object.profile_picture.url }}" class="rounded-circle img-fluid"
-                            alt="User profile picture" style="width: 150px; height: 150px;">
-                    </div>
-                    {% endif %}
-                    <h5 class="card-title">{{ object.name }}</h5>
-                    <p class="card-text">Username: {{ object.username }}</p>
-                    <p class="card-text">Email: {{ object.email }}</p>
-                    {% if object.has_resume %}
-                    <a href="{% url 'resume_details' object.username %}"
-                        class="btn border bg-dark-subtle text-dark-emphasis border border-dark-subtle">View Resume</a>
-                    {% endif %}
-                </div>
+<div class="container pt-5">
+    <div class="card my-auto mx-auto text-white bg-dark col-lg-5 mt-5">
+        <div class="card-header">
+            Profile
+        </div>
+        <div class="card-body">
+            {% if object.profile_picture %}
+            <div class="text-center mb-3">
+                <img src="{{ object.profile_picture.url }}" class="rounded-circle img-fluid" alt="User profile picture"
+                    style="width: 150px; height: 150px; object-fit: cover">
             </div>
+            {% endif %}
+            <h5 class="card-title">{{ object.name }}</h5>
+            <p class="card-text">Username: {{ object.username }}</p>
+            <p class="card-text">Email: {{ object.email }}</p>
+            {% if object.has_resume %}
+            <a href="{% url 'resume_details' object.username %}"
+                class="btn border bg-dark-subtle text-dark-emphasis border border-dark-subtle">View Resume</a>
+            {% endif %}
         </div>
     </div>
+</div>
 </div>
 {% endblock body %}
