misc: minor style improvements

--- a/templates/ai_answer.html
+++ b/templates/ai_answer.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}AI answer | Unicorn AI{% endblock %}
+{% block title %}AI answer • Unicorn AI{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -20,7 +20,7 @@
     </div>
 </nav>
 <div class=" d-flex justify-content-center align-items-center" style="height: 80vh;">
-    <div class="card col-lg-4 col-md-7 col-sm-10">
+    <div class="card col-lg-4 col-md-7 col-sm-10 rounded-4">
         <div class="card-header text-center">
             <h5>AI Answer</h5>
         </div>
