--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Password changed | Unicorn AI{% endblock title %}
+{% block title %}Password changed • Unicorn AI{% endblock title %}
 
 {% block body %}
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
