--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Enter new password | Unicorn AI{% endblock title %}
+{% block title %}Enter new password • Unicorn AI{% endblock title %}
 
 {% block body %}
 <div>
