--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Email sent | Unicorn AI{% endblock title %}
+{% block title %}Email sent • Unicorn AI{% endblock title %}
 
 {% block body %}
 <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
