--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Reset your password | Unicorn AI{% endblock title %}
+{% block title %}Reset your password • Unicorn AI{% endblock title %}
 
 {% block body %}
 <div class="container d-flex flex-column justify-content-center align-items-center flex-wrap" style="height: 100vh;">
