--- a/templates/resume_update.html
+++ b/templates/resume_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Update resume | Unicorn AI{% endblock title %}
+{% block title %}Update resume • Unicorn AI{% endblock title %}
 
 {% block body %}
 <nav class="navbar navbar-dark mb-4">
