--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Signup | Unicorn AI{% endblock %}
+{% block title %}Signup • Unicorn AI{% endblock %}
 
 {% block body %}
 <form action="" method="post">
