--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ user.name }} | Unicorn AI{% endblock %}
+{% block title %}{{ user.name }} • Unicorn AI{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-dark mb-4">
@@ -10,7 +10,7 @@
 </nav>
 
 <div class="container pt-5">
-    <div class="card my-auto mx-auto text-white bg-dark col-lg-5 mt-5">
+    <div class="card my-auto mx-auto text-white bg-dark col-lg-5 mt-5 rounded-4">
         <div class="card-header">
             Profile
         </div>
