--- a/templates/user_update.html
+++ b/templates/user_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Change info | Unicorn AI{% endblock %}
+{% block title %}Change info • Unicorn AI{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-dark mb-4">
