--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Password set | Unicorn AI{% endblock title %}
+{% block title %}Password set • Unicorn AI{% endblock title %}
 
 {% block body %}
 <div class="container d-flex flex-column justify-content-center align-items-center flex-wrap" style="height: 100vh;">
