--- a/templates/resume_details.html
+++ b/templates/resume_details.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Resume Detail | Unicorn AI{% endblock %}
+{% block title %}Resume Detail • Unicorn AI{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-dark mb-4">
@@ -12,11 +12,11 @@
 </nav>
 
 <div class="container mt-4">
-    <div class="card text-white bg-dark mb-3 mb-5">
+    <div class="card text-white bg-dark mb-3 mb-5 rounded-4">
         <div class="row g-0">
             {% if object.owner.profile_picture %}
             <div class="col-md-4 d-flex justify-content-center align-items-center" style="overflow-y: hidden;">
-                <img src="{{ object.owner.profile_picture.url }}" class="rounded-start w-100"
+                <img src="{{ object.owner.profile_picture.url }}" class="rounded-start-4 w-100"
                     alt="{{ object.owner.name }}">
             </div>
             {% endif %}
