--- a/templates/update_profile_picture.html
+++ b/templates/update_profile_picture.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Change profile picture | Unicorn AI{% endblock %}
+{% block title %}Change profile picture • Unicorn AI{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-dark mb-4">
