--- a/templates/user_not_found.html
+++ b/templates/user_not_found.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}User not found | Unicorn AI{% endblock title %}
+{% block title %}User not found • Unicorn AI{% endblock title %}
 
 {% block body %}
 <nav class="navbar navbar-dark mb-4">
