--- a/templates/resume_update.html
+++ b/templates/resume_update.html
@@ -15,31 +15,31 @@
         <div class="mb-3">
             <label for="id_job_title" class="form-label">Job title:</label>
             <textarea name="job_title" class="form-control" rows="2" required=""
-                id="id_job_title">Python Developer</textarea>
+                id="id_job_title">{{ object.job_title }}</textarea>
         </div>
 
         <div class="mb-3">
             <label for="id_skills" class="form-label">Skills:</label>
             <textarea name="skills" class="form-control" rows="2" required=""
-                id="id_skills">Python, Django, Docker, Databases, HTML5, CSS, Bootstrap, Git, GitHub, and with Linux</textarea>
+                id="id_skills">{{ object.skills }}</textarea>
         </div>
 
         <div class="mb-3">
             <label for="id_languages" class="form-label">Languages:</label>
             <textarea name="languages" class="form-control" rows="2" required=""
-                id="id_languages">English, Ukrainian, Russian</textarea>
+                id="id_languages">{{ object.languages }}</textarea>
         </div>
 
         <div class="mb-3">
             <label for="id_about" class="form-label">About:</label>
             <textarea name="about" class="form-control" rows="2" required=""
-                id="id_about">A Python / Web developer, Software Engineering student, and the Tech Threads Mentors/Mentees program creator.</textarea>
+                id="id_about">{{ object.about }}</textarea>
         </div>
 
         <div class="mb-3">
             <label for="id_experience" class="form-label">Experience:</label>
             <textarea name="experience" class="form-control" rows="2" required=""
-                id="id_experience">Personal projects, all featured on alexyelisieiev.github.io</textarea>
+                id="id_experience">{{ object.experience }}</textarea>
         </div>
 
         <div class="mb-3 form-check">
