--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="container d-flex flex-column justify-content-center align-items-center flex-wrap" style="height: 100vh;">
-    <h1 class="mb-4">Change password</h1>
-    <form class="form bg-light rounded-4 col-lg-3 p-3 col-md-4 col-sm-6" action="" method="post">
+    <h1 class="mb-3">Change password</h1>
+    <form class="form rounded-4 col-lg-3 p-3 col-md-4 col-sm-6" action="" method="post">
         {% csrf_token %}
         <div>
             <label class="form-label" for="id_old_password">Old password:</label>
@@ -22,7 +22,8 @@
             <input class="form-control" type="password" name="new_password2" autocomplete="new-password" required=""
                 id="id_new_password2">
         </div>
-        <button class="btn btn-primary mt-3" type="submit">Submit</button>
+        <button class="btn border bg-dark-subtle text-dark-emphasis border border-dark-subtle mt-3"
+            type="submit">Submit</button>
     </form>
 </div>
 {% endblock body %}
