--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -3,9 +3,9 @@
 {% block title %}Enter new password • Unicorn AI{% endblock title %}
 
 {% block body %}
-<div>
-    <h1>Create a new password</h1>
-    <form action="" method="post">
+<div class="d-flex align-items-center justify-content-center flex-column" style="height: 100vh;">
+    <h1 class="mb-3">Create a new password</h1>
+    <form class="col-lg-2 col-md-3 col-sm-4 form rounded-4" action="" method="post">
         {% csrf_token %}
         <div>
             <label class="form-label" for="id_new_password1">New password:</label>
@@ -17,7 +17,7 @@
             <input class="form-control" type="password" name="new_password2" autocomplete="new-password" required=""
                 id="id_new_password2">
         </div>
-        <button class="btn bg-primary-subtle text-primary-emphasis border border-primary-subtle mt-3"
+        <button class="btn border bg-dark-subtle text-dark-emphasis border border-dark-subtle mt-3"
             type="submit">Submit</button>
     </form>
 </div>
